I really wanted to fix the navbar alignment with toggle menu but I couldn't :(

--- a/app/assets/stylesheets/homepages.scss
+++ b/app/assets/stylesheets/homepages.scss
@@ -77,6 +77,17 @@
 
 // .overflow-hidden { overflow: hidden; }
 
+.card-title {
+  font-size: 2em;
+}
+
+.card-text {
+  font-size: 1.1em;
+  font-weight: 100;
+  color: black;
+
+}
+
 .jumbotron {
   padding-top: 3rem;
   padding-bottom: 3rem;
